接口调试完成80%

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <title>tumaproject</title>
 </head>
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=hXs1Y60Zu38CA63OTvLLOYogfycrz5aw"></script>
+<script type="text/javascript"
+        src="http://api.map.baidu.com/getscript?v=2.0&ak=hXs1Y60Zu38CA63OTvLLOYogfycrz5aw"></script>
+<script type="text/javascript" src="http://api.map.baidu.com/library/LuShu/1.2/src/LuShu_min.js"></script>
 <body>
 <div id="app"></div>
 <!-- built files will be auto injected -->
