测试第一轮bug结束，第二轮转测开始

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
 </head>
 <script type="text/javascript"
         src="http://api.map.baidu.com/getscript?v=2.0&ak=hXs1Y60Zu38CA63OTvLLOYogfycrz5aw"></script>
+<!--轨迹回放-->
 <script type="text/javascript" src="http://api.map.baidu.com/library/LuShu/1.2/src/LuShu_min.js"></script>
+<!--拉框放大-->
+<script type="text/javascript"
+        src="http://api.map.baidu.com/library/RectangleZoom/1.2/src/RectangleZoom_min.js"></script>
+<!--点聚合-->
+<script type="text/javascript"
+        src="http://api.map.baidu.com/library/TextIconOverlay/1.2/src/TextIconOverlay_min.js"></script>
+<script type="text/javascript"
+        src="http://api.map.baidu.com/library/MarkerClusterer/1.2/src/MarkerClusterer_min.js"></script>
+<!--加载鼠标绘制工具-->
+<script type="text/javascript"
+        src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
+<link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css"/>
+<script type="text/javascript" src="http://api.map.baidu.com/library/GeoUtils/1.2/src/GeoUtils_min.js"></script>
 <body>
 <div id="app"></div>
 <!-- built files will be auto injected -->
