体验优化需求：今日***添加时间选择条件、告警添加批量处理按钮和状态颜色

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <script type="text/javascript" src="http://api.map.baidu.com/library/GeoUtils/1.2/src/GeoUtils_min.js"></script>
 <!--热力图-->
 <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>
+<!--海量点-->
+<script type="text/javascript" src="http://lbsyun.baidu.com/jsdemo/data/points-sample-data.js"></script>
 </body>
 <style type="text/css">
   html, body {
