1、添加车辆档案页面2、设备地图增加比例尺和测距工具3、‘角色’-‘岗位’、‘组织’-‘公安机关’、‘用户名’-‘姓名’

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <script type="text/javascript" src="./static/baidumapv2/tools/DrawingManager_min.js"></script>
 <script type="text/javascript" src="./static/baidumapv2/tools/GeoUtils_min.js"></script>
 <script type="text/javascript" src="./static/baidumapv2/tools/Heatmap_min.js"></script>
+<script type="text/javascript" src="./static/baidumapv2/tools/DistanceTool_min.js"></script>
 <!--<script type="text/javascript"-->
 <!--src="http://api.map.baidu.com/getscript?v=2.0&ak=hXs1Y60Zu38CA63OTvLLOYogfycrz5aw"></script>-->
 <!--<link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css"/>-->
